src/test/ui/issues/issue-20616-9.stderr
error: expected one of `>`, identifier, or lifetime, found `,`
  --> $DIR/issue-20616-9.rs:36:15
   |
LL | type Type_9<T,,> = Box<T>; //~ error: expected one of `>`, identifier, or lifetime, found `,`
   |               ^ expected one of `>`, identifier, or lifetime here

error: aborting due to previous error

